--- a/myProject/package.json
+++ b/myProject/package.json
@@ -23,6 +23,7 @@
     "react-native-safe-area-context": "^3.0.7",
     "react-native-screens": "^2.9.0",
     "react-navigation": "^4.4.0",
+    "react-redux": "^7.2.0",
     "uuid": "^8.2.0",
     "uuidv4": "^6.1.1"
   },
