--- a/myProject/package.json
+++ b/myProject/package.json
@@ -24,6 +24,7 @@
     "react-native-screens": "^2.9.0",
     "react-navigation": "^4.4.0",
     "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
     "uuid": "^8.2.0",
     "uuidv4": "^6.1.1"
   },
