--- a/myProject/package.json
+++ b/myProject/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^5.6.1",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
+    "buffer": "^5.6.0",
     "immutability-helper": "^3.1.1",
     "react": "16.11.0",
     "react-native": "0.62.2",
@@ -22,11 +23,10 @@
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.7",
     "react-native-screens": "^2.9.0",
+    "react-native-uuid": "^1.4.9",
     "react-navigation": "^4.4.0",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.5",
-    "uuid": "^8.2.0",
-    "uuidv4": "^6.1.1"
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
